Table users{
  id INTEGER PK
  firstName VARCHAR
  lastName VARCHAR
  email VARCHAR
  username VARCHAR
  hashedPassword VARCHAR
  createdAt TIMESTAMP
  updatedAt TIMESTAMP
} 

Table spots{
  id INTEGER PK
  ownerId INTEGER 
  address VARCHAR
  city VARCHAR
  state VARCHAR
  country VARCHAR
  lat DECIMAL
  lng DECIMAL
  name VARCHAR
  description VARCHAR
  price INTEGER
  createdAt TIMESTAMP
  updatedAt TIMESTAMP
  //avgRating DECIMAL//update to aggregate, not a column on the table, fewer routes
  //previewImage VARCHAR
} 
Ref: users.(id) < spots.(ownerId)
Table spotImages{
  id INTEGER PK
  spotId INTEGER
  url VARCHAR
  previewBool BOOLEAN
  createdAt TIMESTAMP
  updatedAt TIMESTAMP
} 
Ref: spots.(id) < spotImages.(spotId)


Table reviews{
  id INTEGER PK
  userId INTEGER 
  spotId INTEGER 
  review VARCHAR
  stars DECIMAL
  createdAt TIMESTAMP
  updatedAt TIMESTAMP
  //User [ref: > users]
  //Spot
  //ReviewImages
} 
Ref: users.(id) < reviews.(userId)
Ref: spots.(id) < reviews.(spotId)

Table reviewImages{
  id INTEGER PK
  reviewId INTEGER
  url VARCHAR
  createdAt TIMESTAMP
  updatedAt TIMESTAMP
} 
Ref: reviews.(id) < reviewImages.(reviewId)

Table bookings{
  id INTEGER PK
  userId INTEGER 
  spotId INTEGER  
  startDate DATE
  endDate DATE
  createdAt TIMESTAMP
  updatedAt TIMESTAMP
} 

Ref: users.(id) < bookings.(userId)
Ref: spots.(id) < bookings.(spotId)
